# fashion-snowflake-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY_NOTE.md  data_generator.py  demo.sh  docker-compose.yml  generate_snowflake_keys.sh  ingester.py  ingester_direct.py  ingester_snowpipe.py  pyproject.toml  requirements-dev.txt  requirements.txt  retrieve_snowflake_data.py  snowflake_config.py
.github/workflows/: ci.yml
dags/: README.md  callbacks.py  monogram_etl_dag.py  monogram_reference_refresh_dag.py  monogram_stream_monitor_dag.py
dashboard/: streamlit_app.py
data/: inventory.json  products.json  promotions.json  returns.json  stores.json  suppliers.json
dbt/: README.md  dbt_project.yml  package-lock.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_customer.sql  dim_date.sql  dim_product.sql  dim_store.sql  fact_returns.sql  fact_sales.sql  fct_sales_realtime.sql  schema.yml
dbt/models/staging/: schema.yml  stg_customers.sql  stg_inventory.sql  stg_products.sql  stg_returns.sql  stg_reviews.sql  stg_sales.sql  stg_stores.sql  stg_stream_sales.sql  stg_suppliers.sql
dbt/snapshots/: customer_snapshot.sql
dbt/tests/: assert_fact_sales_amount_consistency.sql  assert_no_future_dated_sales.sql  assert_stream_no_duplicate_offsets.sql
deliverables/: presentation.pptx
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEFENSE.md  ERROR_HANDLING.md  EVALUATION.md  LOOM_SCRIPT.md  MONITORING.md  STREAMING.md
python/monogram_etl/: __init__.py
sql/ddl/: 00_database_setup.sql  01_raw_transactional.sql  02_raw_reference.sql  03_raw_streaming.sql  README.md
sql/validation/: assert_data_freshness.sql  assert_referential_integrity.sql  assert_row_count_within_bounds.sql  assert_stream_exactly_once.sql  assert_stream_freshness.sql  assert_stream_throughput.sql
tests/: conftest.py
tests/data_quality/: test_generated_data_quality.py
tests/integration/: test_direct_ingester.py
tests/streaming/: test_events.py  test_sink.py
tests/unit/: test_data_generator.py  test_snowflake_config.py
(+15 files in other folders)
